Source/WebCore/Modules/indexeddb/server/IDBServer.h
@@ -31,6 +31,7 @@
 #include "IDBDatabaseIdentifier.h"
 #include "UniqueIDBDatabase.h"
 #include "UniqueIDBDatabaseConnection.h"
+#include <pal/HysteresisActivity.h>
 #include <wtf/CrossThreadTaskHandler.h>
 #include <wtf/HashMap.h>
 #include <wtf/Lock.h>
@@ -54,8 +55,8 @@ class IDBBackingStoreTemporaryFileHandler;
 
 class IDBServer : public RefCounted<IDBServer>, public CrossThreadTaskHandler {
 public:
-    static Ref<IDBServer> create(IDBBackingStoreTemporaryFileHandler&);
-    WEBCORE_EXPORT static Ref<IDBServer> create(const String& databaseDirectoryPath, IDBBackingStoreTemporaryFileHandler&);
+    static Ref<IDBServer> create(IDBBackingStoreTemporaryFileHandler&, WTF::Function<void(bool)>&& isClosingDatabaseCallback = [](bool) { });
+    WEBCORE_EXPORT static Ref<IDBServer> create(const String& databaseDirectoryPath, IDBBackingStoreTemporaryFileHandler&, WTF::Function<void(bool)>&& isClosingDatabaseCallback = [](bool) { });
 
     WEBCORE_EXPORT void registerConnection(IDBConnectionToClient&);
     WEBCORE_EXPORT void unregisterConnection(IDBConnectionToClient&);
@@ -109,9 +110,13 @@ public:
     uint64_t perOriginQuota() const { return m_perOriginQuota; }
     WEBCORE_EXPORT void setPerOriginQuota(uint64_t);
 
+    void closeDatabase(UniqueIDBDatabase*);
+    void didCloseDatabase(UniqueIDBDatabase*);
+    void hysteresisUpdated(PAL::HysteresisState);
+
 private:
-    IDBServer(IDBBackingStoreTemporaryFileHandler&);
-    IDBServer(const String& databaseDirectoryPath, IDBBackingStoreTemporaryFileHandler&);
+    IDBServer(IDBBackingStoreTemporaryFileHandler&, WTF::Function<void(bool)>&&);
+    IDBServer(const String& databaseDirectoryPath, IDBBackingStoreTemporaryFileHandler&, WTF::Function<void(bool)>&&);
 
     UniqueIDBDatabase& getOrCreateUniqueIDBDatabase(const IDBDatabaseIdentifier&);
 
@@ -124,6 +129,7 @@ private:
 
     HashMap<uint64_t, RefPtr<IDBConnectionToClient>> m_connectionMap;
     HashMap<IDBDatabaseIdentifier, std::unique_ptr<UniqueIDBDatabase>> m_uniqueIDBDatabaseMap;
+    HashSet<UniqueIDBDatabase*> m_uniqueIDBDatabasesInClose;
 
     HashMap<uint64_t, UniqueIDBDatabaseConnection*> m_databaseConnections;
     HashMap<IDBResourceIdentifier, UniqueIDBDatabaseTransaction*> m_transactions;
@@ -134,6 +140,9 @@ private:
     IDBBackingStoreTemporaryFileHandler& m_backingStoreTemporaryFileHandler;
 
     uint64_t m_perOriginQuota { defaultPerOriginQuota };
+
+    WTF::Function<void(bool)> m_isClosingDatabaseCallback;
+    PAL::HysteresisActivity m_isClosingDatabaseHysteresis;
 };
 
 } // namespace IDBServer
